# TransformerEngine

./: .clang-format  .gitignore  .gitmodules  Acknowledgements.txt  LICENSE  README.rst  hipify_custom_map.json  setup.py
build_tools/: build_ext.py  jax.py  pytorch.py  utils.py
ci/: _utils.sh  core.sh  jax.sh  pytorch.sh
examples/jax/encoder/: test_model_parallel_encoder.py  test_multigpu_encoder.py  (+2 more)
qa/L0_pytorch_lint/: pylintrc
tests/cpp/: CMakeLists.txt  test_common.cu  test_common.h  test_common.hip  test_common_hip.h
tests/cpp/operator/: CMakeLists.txt  test_cast_transpose.cu  test_cast_transpose.hip  test_cast_transpose_dbias.cu  test_cast_transpose_dbias.hip  test_cast_transpose_dbias_dgelu.cu  test_cast_transpose_dbias_dgelu.hip  test_cast_transpose_dgeglu.cu  test_cublaslt_gemm.cu  test_dgeglu.cu  test_gelu.cu  test_gelu.hip  test_layernorm.cu  test_layernorm.hip  test_multi_cast_transpose.cu  test_qdq.cu  test_qdq.hip  test_rmsnorm.cu  test_transpose.cu  test_transpose.hip
tests/cpp/util/: CMakeLists.txt
tests/jax/: test_custom_call_compute.py  test_distributed_fused_attn.py  test_fused_attn.py  test_fused_attn_basic.py  test_praxis_layers.py  utils.py
tests/pytorch/: test_cast_transpose_triton.py  test_fusible_ops_distributed.py  test_gemm_autotune.py  test_gemm_triton.py  test_numerics.py  test_onnx_export.py  test_recipe.py  test_sanity.py  test_torch_save_load.py
transformer_engine/: CMakeLists.txt  _version.py
transformer_engine/common/: CMakeLists.txt  __init__.py  common.h  common_hip.h  nvtx.h  recipe.py  transformer_engine.cpp  utils.cuh  utils_hip.cuh
transformer_engine/common/activation/: gelu.cu  gelu.hip  relu.cu  swiglu.cu
transformer_engine/common/amd_detail/: hip_f8_impl.h  hip_float8.h
transformer_engine/common/ck_fmha/: CMakeLists.txt
transformer_engine/common/ck_fmha/include/: ck_fmha.h  memory_manager.h
transformer_engine/common/ck_fmha/src/: ck_fmha_bwd.cpp  ck_fmha_fwd.cpp
transformer_engine/common/ck_fused_attn/: CMakeLists.txt
transformer_engine/common/ck_fused_attn/include/ck_fused_attn/: ck_fused_attn.hpp
transformer_engine/common/ck_fused_attn/src/: bias.hpp  ck_fused_attn.cpp  ck_fused_attn_bwd.cpp  ck_fused_attn_fwd.cpp  fmha_bwd.hpp  fmha_fwd.hpp
transformer_engine/common/fused_attn/: fused_attn.cpp  fused_attn_f16_arbitrary_seqlen.cu  fused_attn_f16_arbitrary_seqlen.h  fused_attn_fp8.cu  generate.py  utils.cu  utils.h
transformer_engine/common/fused_attn/codegen/ops/: fmha_bwd.py  fmha_fwd.py
transformer_engine/common/fused_attn_aotriton/: fused_attn.cpp
transformer_engine/common/fused_attn_rocm/: ck_fused_attn.cpp  ck_fused_attn.h  fused_attn.cpp  fused_attn_aotriton.cpp  fused_attn_aotriton.h  fused_attn_ck.cpp  fused_attn_ck.h  utils.cpp  utils.h
transformer_engine/common/fused_softmax/: scaled_aligned_causal_masked_softmax.cu  scaled_masked_softmax.cu  scaled_upper_triang_masked_softmax.cu
transformer_engine/common/gemm/: cublaslt_gemm.cu  cublaslt_gemm.hip  rocm_gemm.cu  rocm_gemm.hip
transformer_engine/common/include/transformer_engine/: activation_hip.h  bias.hpp  cast_hip.h  fmha_bwd.hpp  fmha_fwd.hpp  fused_attn.h  fused_attn_aotriton.h  gemm.h  gemm_hip.h  layer_norm_hip.h  logging.h  logging_hip.h  mask.hpp  softmax.h  transformer_engine.h  transformer_engine_hip.h  transpose_hip.h
transformer_engine/common/layer_norm/: ln_api.cpp  ln_api_hip.cpp  ln_bwd_kernels.cuh  ln_bwd_kernels_hip.cuh  ln_bwd_semi_cuda_kernel.cu  ln_bwd_semi_hip_kernel.hip  ln_fwd_cuda_kernel.cu  ln_fwd_hip_kernel.hip  ln_fwd_kernels_hip.cuh  ln_hip.h  ln_kernel_traits_hip.h
transformer_engine/common/permutation/: permutation.cu
transformer_engine/common/recipe/: __init__.py  delayed_scaling.cu
transformer_engine/common/rmsnorm/: rmsnorm_api.cpp  rmsnorm_bwd_semi_cuda_kernel.cu  rmsnorm_fwd_cuda_kernel.cu
transformer_engine/common/transpose/: cast_transpose.cu  cast_transpose.hip  cast_transpose_fusion.cu  cast_transpose_fusion.cu.bak  cast_transpose_fusion.hip  multi_cast_transpose.cu  transpose.cu  transpose.hip  transpose_fusion.cu
transformer_engine/common/transpose/rtc/: cast_transpose_fusion.cu
transformer_engine/common/util/: cast.cu  cast.hip  cuda_driver.cpp  cuda_runtime.cpp  cuda_runtime.h  logging.h  rtc.cpp  vectorized_pointwise.h  vectorized_pointwise_hip.h
transformer_engine/jax/: CMakeLists.txt  __init__.py  cpp_extensions.py  fp8.py  fused_attn.py  setup.py  util.py
transformer_engine/jax/cpp_extensions/: activation.py  attention.py  base.py  custom_call.py  misc.py  normalization.py  transpose.py
transformer_engine/jax/csrc/: extensions.cpp  extensions.h  modules.cpp  modules.h  utils.cu  utils.h
transformer_engine/jax/csrc/extensions/: attention.cpp  pybind.cpp
transformer_engine/jax/flax/: transformer.py
transformer_engine/jax/praxis/: transformer.py
transformer_engine/pytorch/: __init__.py  attention.py  cast_transpose_triton.py  cpp_extensions.py  distributed.py  fp8.py  gemm_triton.py  jit.py  module.py  setup.py  softmax.py  utils.py
transformer_engine/pytorch/cpp_extensions/: __init__.py  fused_attn.py  gemm.py  transpose.py
transformer_engine/pytorch/csrc/: comm_gemm_overlap.h  common.cu  common.h  common.hip  common_hip.h  extensions.cu  extensions.h  ts_fp8_op.cpp  type_shim.h
transformer_engine/pytorch/csrc/extensions/: attention.cu  gemm.cu  misc.cu  pybind.cpp
transformer_engine/pytorch/csrc/extensions/multi_tensor/: multi_tensor_adam.cu
transformer_engine/pytorch/csrc/fused_softmax/: scaled_masked_softmax_hip.cpp  scaled_masked_softmax_hip.h  scaled_masked_softmax_hip.hip  scaled_softmax_hip.cpp  scaled_softmax_hip.hip  scaled_upper_triang_masked_softmax_hip.cpp  scaled_upper_triang_masked_softmax_hip.h  scaled_upper_triang_masked_softmax_hip.hip
transformer_engine/pytorch/csrc/userbuffers/: userbuffers.cu
transformer_engine/pytorch/module/: _common.py  base.py  grouped_linear.py  layernorm_linear.py  layernorm_mlp.py  rmsnorm.py
transformer_engine/tensorflow/: CMakeLists.txt
transformer_engine/tensorflow/csrc/: extensions.cu
(+3 files in other folders)
